--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bun-plugin-tailwind": "^0.1.2",
     "dotenv": "^17.2.3",
     "elysia": "^1.4.21",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "react": "^19",
     "react-dom": "^19",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
