--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "bun --hot src/server.ts",
     "start": "NODE_ENV=production bun src/server.ts",
-    "build": "bun run build.ts"
+    "build": "bun run build.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
